--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         lectus at</p>
                 </div>
                 <div id = "border" class="shadow">
-                    <img src="food/project cover1.jpg" alt="">
+                    <img src="food/Project Cover1.jpg" alt="">
                     <h1>Recipie Title</h1>
                     <p>Lorem ipsum dolor sit amet, 
                         consectetur adipiscing elit. Lacus, 
@@ -71,7 +71,7 @@
                         lectus at</p>
                 </div>
                 <div id = "border" class="shadow">
-                    <img src="food/project cover.png" alt="">
+                    <img src="food/Project Cover4.png" alt="">
                     <h1>Recipie Title</h1>
                     <p>Lorem ipsum dolor sit amet, 
                         consectetur adipiscing elit. Lacus, 
